--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -23,6 +23,6 @@ html {
 @media only screen and (max-width: 800px) and (min-width: 456px) {
   #dolphin {
     position: relative;
-    top:;
+    top: 50px;
   }
 }
