--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,7 +20,7 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (max-width: 800px) and (min-width: 456px) {
+@media only screen and (min-width: 456px) and (max-width: 800px){
   #dolphin {
     top: 50px;
   }
