--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,4 +10,9 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (min-width: 456px) and (max-width: )
+@media only screen and (min-width: 456px) and (max-width: 1000px) {
+  #monkey {
+    top: 40px;
+    right: 40px;
+  }
+}
