--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -10,4 +10,9 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (min-width:406px) and (max-width:)
+@media only screen and (min-width:406px) and (max-width:1300px) {
+  #ostrich {
+    top: 0;
+    right: 0;
+  }
+}
